--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.8",
     "postcss": "^8",
+    "prisma": "^6.8.2",
     "tailwindcss": "^3.4.1"
   }
 }
