--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "clsx": "^2.1.1",
     "inngest": "^3.38.0",
     "lucide-react": "^0.511.0",
-    "next": "15.1.8",
+    "next": "^15.3.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
-    "sonner": "^2.0.3",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.25.56"
