--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.20.0",
     "@clerk/themes": "^2.2.48",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.1.0",
     "@prisma/client": "^6.9.0",
     "@radix-ui/react-accordion": "^1.2.11",
